force-app/main/default/objects/Message__c/Message__c.object-meta.xml
<CustomObject>
    <label>Message</label>
    <nameField>
        <displayFormat>MSG-{0000000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>