force-app/main/default/objects/Message__c/fields/Words__c.field-meta.xml
<CustomField>
    <fullName>Words__c</fullName>
    <label>Words</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>